--- a/XMLGenerator/XMLGenerator.csproj
+++ b/XMLGenerator/XMLGenerator.csproj
@@ -96,5 +96,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="uXXYY.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
